--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,62 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pandas==2.2.0
-openpyxl==3.1.2
-python-multipart==0.0.6
-python-dotenv==1.0.0
-azure-ai-projects
-azure-ai-agents
-azure-identity 
+annotated-types==0.7.0
+anyio==4.9.0
+azure-ai-agents==1.0.1
+azure-ai-projects==1.0.0b11
+azure-core==1.34.0
+azure-identity==1.23.0
+azure-storage-blob==12.25.1
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+cryptography==45.0.4
+distro==1.9.0
+dnspython==2.7.0
+email_validator==2.2.0
+et_xmlfile==2.0.0
+fastapi==0.115.12
+fastapi-cli==0.0.7
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+isodate==0.7.2
+Jinja2==3.1.6
+jiter==0.10.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+msal==1.32.3
+msal-extensions==1.3.1
+numpy==2.3.0
+openai==1.86.0
+openpyxl==3.1.5
+pandas==2.3.0
+pycparser==2.22
+pydantic==2.11.5
+pydantic_core==2.33.2
+Pygments==2.19.1
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
+rich==14.0.0
+rich-toolkit==0.14.7
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+starlette==0.46.2
+tqdm==4.67.1
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.34.3
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
