--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,18 +1,6 @@
 FROM node:18-alpine
-
 WORKDIR /app
-
-# Copy package files
-COPY package*.json ./
-
-# Install dependencies
-RUN npm install
-
-# Copy source code
 COPY . .
-
-# Expose port
+RUN npm install && npm run build
 EXPOSE 3000
-
-# Start development server with hot-reload
-CMD ["npm", "run", "dev", "--", "--hostname", "0.0.0.0"]
+CMD ["npm", "start"]
