--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,25 +1,37 @@
-version: "3.8"
+version: '3'
 services:
-  backend:
-    build: ./server
-    ports:
-      - "8000:8000"
-    environment:
-      - APP_NAME=server
-    volumes:
-      - ./server:/app
-      - /app/__pycache__
   frontend:
-    build: ./client
+    build:
+      context: ./client
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     depends_on:
       - backend
-    environment:
-      - APP_NAME=client
-      - CHOKIDAR_USEPOLLING=true
-      - WATCHPACK_POLLING=true
-    volumes:
-      - ./client:/app
-      - /app/node_modules
-      - /app/.next
+    networks:
+      - app-network
+
+  backend:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    networks:
+      - app-network
+
+  nginx:
+    build:
+      context: ./proxy
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
